AlterService.yaml
apiVersion: v1
kind: Service
metadata:
  name: CI_ENVIRONMENT_SLUG
  namespace: KUBE_NAMESPACE
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8080'
spec:
  selector: 
    app: CI_ENVIRONMENT_SLUG
  type: NodePort  
  ports:
    - port: 9093
      targetPort: 9093
      nodePort: 31000
