metrics.yml
apiVersion: v1
kind: Service
metadata:
  name: CI_ENVIRONMENT_SLUG-metrics
  namespace: KUBE_NAMESPACE
  labels:
    app: CI_ENVIRONMENT_SLUG-metrics
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
  - name: metrics
    port: 8080
    targetPort: metrics
    protocol: TCP
  selector:
    app: CI_ENVIRONMENT_SLUG-metrics
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: CI_ENVIRONMENT_SLUG-metrics
  namespace: KUBE_NAMESPACE
  labels:
    app: CI_ENVIRONMENT_SLUG-metrics
spec:
  replicas: 1
  template:
    metadata:
      name: CI_ENVIRONMENT_SLUG-metrics-main
      labels:
        app: CI_ENVIRONMENT_SLUG-metrics
    spec:
      containers:
        - name: kube-state-metrics
          image: quay.io/coreos/kube-state-metrics:latest
          ports:
          - containerPort: 8080
            name: metrics
