redis.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: CI_ENVIRONMENT_SLUG-media-redis
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9121"
      labels:
        app: CI_ENVIRONMENT_SLUG-media-redis
    spec:
      volumes:
        - name: host-sys
          hostPath:
            path: /sys
      containers:
      - name: redis
        image: redis:4.0-alpine
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 250m
            memory: 500Mi
        ports:
        - containerPort: 6379
      - name: redis-exporter
        image: oliver006/redis_exporter:v0.21.1
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 9121
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9121"
  name: CI_ENVIRONMENT_SLUG-redis-svc
  labels:
    app: CI_ENVIRONMENT_SLUG-redis
spec:
  ports:
  - port: 6379
    name: redis
  - port: 9121
    name: metrics
  selector:
    app: CI_ENVIRONMENT_SLUG-redis
